fix(ci): Fix glob pattern in test file detection and unset test
- CI was using 'if [ -f test_*.sh ]' which doesn't expand globs
- Changed to use bash array with nullglob to properly detect test files
- Fixed unset test grep patterns to use ^ anchor to avoid matching
  env values containing A=, B=, C= in CI environment

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,9 +101,13 @@ jobs:
     
     - name: Run ${{ matrix.test-suite }} tests
       run: |
-        if [ -f "tests/${{ matrix.test-suite }}/test_*.sh" ]; then
+        shopt -s nullglob
+        tests=(tests/${{ matrix.test-suite }}/test_*.sh)
+        if [ ${#tests[@]} -gt 0 ]; then
           chmod +x tests/${{ matrix.test-suite }}/test_*.sh
-          bash tests/${{ matrix.test-suite }}/test_*.sh
+          for test in "${tests[@]}"; do
+            bash "$test"
+          done
         else
           echo "No tests found for ${{ matrix.test-suite }}"
           exit 1
